Update README with run instructions